# saga_of_dragon

./: README.md
dragonica_master/: .gitignore  CMakeLists.txt  CMakeSettings.json  MakeActionDataCode.bat  cmake_generate.bat
dragonica_master/Archangel/: CMakeLists.txt
dragonica_master/Archangel/Center/: CMakeLists.txt  CenterServer.rc  PgCenterServer.cpp  PgEventDoc.cpp  PgEventDoc.h  PgKeyEvent.cpp  PgKeyEvent.h  PgLChannelMgr.cpp  PgLChannelMgr.h  PgPortalMgr.cpp  PgPortalMgr.h  PgRecvFromContents.cpp  PgRecvFromContents.h  PgRecvFromItem.cpp  PgRecvFromItem.h  PgRecvFromLog.cpp  PgRecvFromLog.h  PgRecvFromManagementServer.cpp  PgRecvFromManagementServer.h  PgRecvFromServer.cpp  PgRecvFromServer.h  PgSendWrapper.cpp  PgSendWrapper.h  PgServerSetMgr.cpp  PgServerSetMgr.h  PgServerSetMgr_Helper.cpp  PgSwitchAssignMgr.cpp  PgSwitchAssignMgr.h  PgTimer.cpp  PgTimer.h  PgUserWrapper.cpp  PgUserWrapper.h  ReadMe.txt  constant.h  resource.h  stdafx.cpp  stdafx.h
dragonica_master/Archangel/Consent/: CMakeLists.txt  ConsentServer.cpp  ConsentServer.rc  Constant.h  Nexon.cpp  Nexon.h  NexonAuth.cpp  NexonCash.cpp  PgGravityServer.cpp  PgGravityServer.h  PgKeyEvent.cpp  PgNcGSM.cpp  PgNcGSM.h  PgNcServer.cpp  PgNcServer.h  PgRecvFromMMC.cpp  PgRecvFromMMC.h  PgSiteMemberMgr.cpp  PgSiteMemberMgr.h  PgTimer.cpp  PgTimer.h  SessionMgr.h  SessionMgr.hpp  md5.c  resource.h  stdafx.cpp  stdafx.h
dragonica_master/Archangel/ContentsServer/: CMakeLists.txt  ContentsServer.rc  JobDispatcher.cpp  JobDispatcher.h  JobWorker.cpp  JobWorker.h  OpenMarket.cpp  OpenMarket.h  PgContentsServer.cpp  PgCouponEventDoc.cpp  PgCouponEventDoc.h  PgDBProcess.cpp  PgDBProcess.h  PgDBSaveAction.cpp  PgDBSaveAction.h  PgEventDoc.cpp  PgEventDoc.h  PgExpeditionListMgr.cpp  PgExpeditionListMgr.h  PgGMProcessMgr.cpp  PgGMProcessMgr.h  PgGambleUserMgr.cpp  PgGambleUserMgr.h  PgGuildDB.cpp  PgGuildDB.h  PgIndunPartyMgr.cpp  PgIndunPartyMgr.h  PgJobSkillChecker.cpp  PgJobSkillChecker.h  PgKeyEvent.cpp  PgKeyEvent.h  PgMyHomeMgr.cpp  PgMyHomeMgr.h  PgPvPLeague.cpp  PgPvPLeague.h  PgPvPLeagueMgr.cpp  PgPvPLeagueMgr.h  PgPvPRankingSceduler.cpp  PgPvPRankingSceduler.h  PgRecvFromImmigration.cpp  (+30 more)
dragonica_master/Archangel/Dummy/: CMakeLists.txt  Constant.h  Dummy.cpp  DummyClient.cpp  DummyClient.h  DummyClient2.cpp  DummyClient2.h  DummyClientMgr.cpp  DummyClientMgr.h  DummyClient_AI.cpp  DummyClient_Login_AI.cpp  DummyMgr2.cpp  DummyMgr2.h  Global.cpp  Global.h  KeyEvent.cpp  KeyEvent.h  Network.cpp  Network.h  PgClientMng.cpp  PgClientMng.h  PgVirtualWorld.cpp  ReadMe.txt  VirtualWorld.h  ai_Action.cpp  ai_Action.h  stdafx.cpp  stdafx.h
dragonica_master/Archangel/GMServer/: CMakeLists.txt  GMServer.rc  IGMLocaleprocess.h  PgDBProcess.cpp  PgDBProcess.h  PgGMServer.cpp  PgGMTask.cpp  PgGMTask.h  PgGMUserMgr.cpp  PgGMUserMgr.h  PgGmChatMgr.cpp  PgGmChatMgr.h  PgKeyEvent.cpp  PgKeyEvent.h  PgMsgHolder.cpp  PgMsgHolder.h  PgNcGmCommand.cpp  PgNcGmCommand.h  PgNoticeMgr.cpp  PgNoticeMgr.h  PgPetitionDataMgr.cpp  PgPetitionDataMgr.h  PgRecvFromGMTool.cpp  PgRecvFromGMTool.h  PgRecvFromImmigration.cpp  PgRecvFromImmigration.h  PgRecvFromLogin.cpp  PgRecvFromLogin.h  PgSendWrapper.cpp  PgSendWrapper.h  ReadMe.txt  stdafx.cpp  stdafx.h
dragonica_master/Archangel/Immigration/: CMakeLists.txt  ImmTask.cpp  ImmTask.h  Immigration.cpp  ImmigrationServer.aps  ImmigrationServer.rc  PgAPProcessMgr.cpp  PgAPProcessMgr.h  PgConsentControl.cpp  PgConsentControl.h  PgDBProcess.cpp  PgDBProcess.h  PgGMProcessMgr.cpp  PgGMProcessMgr.h  PgKeyEvent.cpp  PgKeyEvent.h  PgRecvFromLog.cpp  PgRecvFromLog.h  PgRecvFromMMC.cpp  PgRecvFromMMC.h  PgRecvFromServer.cpp  PgRecvFromServer.h  PgSendWrapper.cpp  PgSendWrapper.h  PgServerSessionMgr.cpp  PgServerSessionMgr.h  PgSiteMgr.cpp  PgSiteMgr.h  PgTimer.cpp  PgTimer.h  PgWaitingLobby.cpp  PgWaitingLobby.h  RecvFromConsent.cpp  RecvFromConsent.h  constant.h  resource.h  stdafx.cpp  stdafx.h
dragonica_master/Archangel/LogServer/: CMakeLists.txt  LogServer.cpp  LogServer.rc  LogUtil.cpp  LogUtil.h  NCLog.inl  NcLog.cpp  NcLog.h  NcLogUtil.cpp  NcLogUtil.h  NullLog.cpp  NullLog.h  PgDBProcess.cpp  PgDBProcess.h  PgKeyEvent.cpp  PgKeyEvent.h  PgLogMgr.cpp  PgLogMgr.h  PgRecvFromImmigration.cpp  PgRecvFromImmigration.h  PgRecvFromOtherServer.cpp  PgRecvFromOtherServer.h  PgTimer.cpp  PgTimer.h  RecvFromSP.cpp  RecvFromSP.h  constant.h  resource.h  stdafx.cpp  stdafx.h
dragonica_master/Archangel/LoginServer/: CMakeLists.txt  LoginServer.rc  PgKeyEvent.cpp  PgKeyEvent.h  PgLoginServer.cpp  PgLoginUserMgr.cpp  PgLoginUserMgr.h  PgPatchVersionManager.cpp  PgPatchVersionManager.h  PgRecvFromImmigration.cpp  PgRecvFromImmigration.h  PgRecvFromLog.cpp  PgRecvFromLog.h  PgRecvFromServer.cpp  PgRecvFromServer.h  PgRecvFromUser.cpp  PgRecvFromUser.h  PgSendWrapper.cpp  PgSendWrapper.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
dragonica_master/Archangel/MapServer/: CMakeLists.txt  Global.cpp  Global.h  MapServer.rc  PgAction.cpp  PgAction.h  PgActionAchievement.cpp  PgActionAchievement.h  PgActionAchievement.inl  PgActionJobSkill.cpp  PgActionJobSkill.h  PgActionPost.cpp  PgActionPost.h  PgActionQuest.cpp  PgActionQuest.h  PgActionUserMarket.cpp  PgActionUserMarket.h  PgAction_Pet.cpp  PgAction_Pet.h  PgBSMapGame.cpp  PgBSMapGame.h  PgBSTeamMng.cpp  PgBSTeamMng.h  PgBSTimeEvent.cpp  PgBSTimeEvent.h  PgBattleArea.cpp  PgBattleArea.h  PgCartMissionGround.cpp  PgCartMissionGround.h  PgConstellationGround.cpp  PgConstellationGround.h  PgConstellationMgr.cpp  PgConstellationMgr.h  PgConstellationResult.cpp  PgConstellationResult.h  PgDefencePartyMgr.cpp  PgDefencePartyMgr.h  PgDuelSystem.cpp  PgDuelSystem.h  PgEventItemSet.cpp  (+110 more)
dragonica_master/Archangel/Switch/: CMakeLists.txt  Constant.h  PgHub.cpp  PgHub.h  PgHubForReservedMember.cpp  PgKeyEvent.cpp  PgKeyEvent.h  PgRecvFromCenter.cpp  (+19 more)
dragonica_master/Tools/: CMakeLists.txt
dragonica_master/cmake/: buildconfig.cmake
dragonica_master/cosmos/: CMakeLists.txt
dragonica_master/example/: CMakeLists.txt
dragonica_master/utility/: gen_csv_collumn.py
(+87772 files in other folders)
