project(Weapons)

set(PROJECT_FOLDER ${PROJECT_NAME})

add_subdirectory(AilePack)
add_subdirectory(Collins)
add_subdirectory(FCS)
add_subdirectory(Lohengrin)
add_subdirectory(Variant)
add_subdirectory(HellDart)
add_subdirectory(Onibal)
add_subdirectory(XUI)
add_subdirectory(hotMeta)
add_subdirectory(ActorEventSystem)
